...
            if isLoading {
                LoadingView(loadingText: "Fetching data...")
            } else {
                // We show the loading view during data recovery
                NavigationView {
                    VStack(alignment: .center, spacing: 0, content: {
                        SearchBarView(text: $searchValue, placeholder: "Search fish")
                            .accessibility(identifier: "SearchFish")

                        if isSearching {
                            ZStack(alignment: Alignment(horizontal: .center, vertical: .center), content: {
                                ProgressView("Searching...")
                            })
                                .frame(minWidth: 0, maxWidth: .infinity, minHeight: 0, maxHeight: .infinity)
                        } else {
                            speciesList
                        }
                    })
                        .background(Color.App.background.edgesIgnoringSafeArea(.all))
                        .navigationBarTitle("Species", displayMode: .inline)
                }
            }
        }
            .onAppear {
                // Fetching data when the view appear
                speciesManager.loadSpecies()
...
