...
                    SpeciesScienceList(speciesScienceInformations: species.scienceInformations, lastUpdate: species.lastUpdate)

                }) // End VStack
                .padding()

            } // End ScrollView
            .background(Image("sand").resizable().aspectRatio(contentMode: .fill))
        } // END VStack main wrapper
        .navigationBarTitle(species.speciesName)
            .ignoresSafeArea(.all, edges: .bottom)
    }
}

...
